[package]
name = "tonic-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.11.0"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
tonic-build = "0.11"
async-await = "0.2.1"
async-stream = "0.3.5"
prost = "0.12.6"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.11"
