[package]
edition = "2021"
name    = "tonic_tutorial"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-await  = "0.2.1"
async-stream = "0.3.6"
prost        = "0.13.5"
rand         = "0.9.1"
serde        = { version = "1.0.219", features = ["derive"] }
serde_json   = "1.0.140"
tokio        = { version = "1.44.2", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1.17"
tonic        = "0.13.0"
tonic-build  = "0.13.0"

[build-dependencies]
tonic-build = "0.13.0"
